<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Testdemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">智能安防系统</string>
    <string name="login">登陆</string>
    <string name="a">用户名和密码登陆</string>
    <string name="regist">注册</string>
    <string name="b">如果你没有用户名，可以用手机注册</string>
    <string name="temperature">温度值</string>
    <string name="temp_humidity_show">室内温湿度</string>
    <string name="temp_date">日期</string>
    <string name="temperature_symbol">℃</string>
    <string name="humidity">湿度</string>
    <string name="humidity_symbol">RH</string>
    <string name="addequipment">设备添加</string>
    <string name="manageequipment">设备管理</string>
    <string name="managealarm">报警管理</string>
    <string name="onecontrol">一键控制</string>
    <string name="myaccount">我的帐号</string>
    <string name="exitlogin">退出登录</string>
    <string name="smogalarm">室内烟雾报警状态</string>
    <string name="presentation">当前状态：</string>


</resources>
