<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#ffffff">"
        
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
           	style="@style/temperature_title_text_style"
            android:text="@string/temp_humidity_show"/>
        <TextView
            android:id="@+id/temp_date" 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/temp_date"/>
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="45dip"
            android:orientation="horizontal"
            android:gravity="center">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           	android:layout_weight="3"
           	android:layout_marginLeft="20dip"
            style="@style/temperature_tag_text_style"
            android:text="@string/temperature"/>
        
        <TextView
            android:id="@+id/text1" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="12"
            android:layout_weight="1"/>
       	<TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature_symbol"
            android:layout_weight="1"/>
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="45dip"
            android:orientation="horizontal"
            android:gravity="center">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           	android:layout_weight="3"
           	android:layout_marginLeft="20dip"
            style="@style/temperature_tag_text_style"
            android:text="@string/humidity"/>
        <TextView
            android:id="@+id/text2" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="12"
            android:layout_weight="1"/>
       	<TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity_symbol"
            android:layout_weight="0.6"/>
        </LinearLayout>
    </LinearLayout>"


</LinearLayout>
